# json-decorator

./: .gitignore  Pipfile  package.sh  pyproject.toml  python.paths  python.sh  setup.cfg
manual/: manual.py
releases/: Pipfile.lock-0.5.0
src/json-decorator/: json-decorator.py
src/json_decorator/: Pipfile  __init__.py  json.py
tests/: test_class.py  test_decorator.py  test_formatter.py  test_nested.py
